--- a/infra/nextcloud/values.yaml
+++ b/infra/nextcloud/values.yaml
@@ -25,6 +25,7 @@ internalDatabase:
 
 persistence:
   enabled: true
+  storageClass: local-path
   existingClaim: nextcloud-pvc
   nextcloudData:
     enabled: true
@@ -32,11 +33,22 @@ persistence:
 
 redis:
   enabled: true
-  tolerations:
-    - key: "location"
-      operator: "Equal"
-      value: "external"
-      effect: "NoSchedule"
+  architecture: standalone
+  global:
+    storageClass: local-path
+  auth:
+    enabled: false
+  networkPolicy:
+    enabled: true
+  master:
+    resourcesPreset: nano
+    persistence:
+      existingClaim: nextcloud-redis-pvc
+    tolerations:
+      - key: "location"
+        operator: "Equal"
+        value: "external"
+        effect: "NoSchedule"
 
 cronjob:
   enabled: true
@@ -44,15 +56,30 @@ cronjob:
 externalDatabase:
   enabled: true
   type: postgresql
+  existingSecret:
+    enabled: true
+    secretName: nextcloud-secret
+    hostKey: db-host
+    databaseKey: db-name
+    usernameKey: db-username
+    passwordKey: db-password
 
 postgresql:
   enabled: true
-  tolerations:
-    - key: "location"
-      operator: "Equal"
-      value: "external"
-      effect: "NoSchedule"
+  architecture: standalone
+  global:
+    storageClass: local-path
+  auth:
+    database: nextcloud
+    username: nextcloud
+    existingSecret: nextcloud-postgres
   primary:
+    resourcesPreset: nano
+    tolerations:
+      - key: "location"
+        operator: "Equal"
+        value: "external"
+        effect: "NoSchedule"
     persistence:
       enabled: true
       existingClaim: nextcloud-postgres-pvc
