--- a/infra/nextcloud/values.yaml
+++ b/infra/nextcloud/values.yaml
@@ -1,8 +1,15 @@
+image:
+  flavor: fpm
+
 ingress:
   enabled: true
   className: nginx
   annotations:
     nginx.ingress.kubernetes.io/affinity: cookie
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
+    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
+    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
 
 tolerations:
   - key: "location"
