--- a/infra/nextcloud/values.yaml
+++ b/infra/nextcloud/values.yaml
@@ -21,6 +21,16 @@ nextcloud:
     enabled: true
     # the user we send email as
     fromAddress: Nextcloud <noreplay@k.joshuachp.dev>
+  configs:
+    proxy.config.php: |-
+      <?php
+      $CONFIG = array (
+        'trusted_proxies' => array(
+          0 => '127.0.0.1',
+          1 => '10.0.0.0/8',
+        ),
+        'forwarded_for_headers' => array('HTTP_X_FORWARDED_FOR'),
+      );
 
 internalDatabase:
   enabled: false
