--- a/infra/nextcloud/values.yaml
+++ b/infra/nextcloud/values.yaml
@@ -6,6 +6,9 @@ ingress:
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
 
+phpClientHttpsFix:
+  enabled: true
+
 tolerations:
   - key: "location"
     operator: "Equal"
@@ -28,7 +31,6 @@ nextcloud:
       $CONFIG = array (
         'maintenance_window_start' => 1,
         'default_phone_region' => 'IT',
-        'overwriteprotocol' => 'https',
       );
     proxy.config.php: |-
       <?php
