--- a/infra/nextcloud/values.yaml
+++ b/infra/nextcloud/values.yaml
@@ -5,6 +5,9 @@ ingress:
     nginx.ingress.kubernetes.io/affinity: cookie
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
+    # .htaccess redirect
+    nginx.ingress.kubernetes.io/proxy-redirect-from: "http://$proxy_host"
+    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://$proxy_host"
 
 phpClientHttpsFix:
   enabled: true
