--- a/infra/nextcloud/values.yaml
+++ b/infra/nextcloud/values.yaml
@@ -6,7 +6,8 @@ ingress:
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
     # .htaccess redirect
-    nginx.ingress.kubernetes.io/proxy-redirect-from: "default"
+    nginx.ingress.kubernetes.io/proxy-redirect-from: "http://nextcloud.k.joshuachp.dev/"
+    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://nextcloud.k.joshuachp.dev/"
 
 phpClientHttpsFix:
   enabled: true
