--- a/infra/ntfy/config.yaml
+++ b/infra/ntfy/config.yaml
@@ -6,3 +6,17 @@ metadata:
 data:
   server.yml: |
     base-url: https://ntfy.k.joshuachp.dev
+    cache-file: "/var/cache/ntfy/cache.db"
+    attachment-cache-dir: "/var/cache/ntfy/attachments"
+    attachment-total-size-limit: "400Mi"
+    behind-proxy: true
+    cache-startup-queries: |
+      PRAGMA journal_mode = WAL;
+      PRAGMA synchronous = NORMAL;
+      -- 64Mb
+      PRAGMA journal_size_limit = 67108864;
+      PRAGMA auto_vacuum = INCREMENTAL;
+      -- per connection
+      PRAGMA busy_timeout = 5000;
+      PRAGMA temp_store = MEMORY;
+      VACUUM;
