--- a/infra/ntfy/deployment.yaml
+++ b/infra/ntfy/deployment.yaml
@@ -16,6 +16,10 @@ spec:
         - name: ntfy
           image: "binwiederhier/ntfy:v2.11.0@sha256:4a7d0f0adc6d5d9fc36e64ab55ef676e76e124a2bdd50ce115b6d9c1c7430294"
           args: ["serve"]
+          envFrom:
+            - secretRef:
+                name: nty-env
+                optional: false
           resources:
             limits:
               memory: "128Mi"
