--- a/infra/argocd/values.yaml
+++ b/infra/argocd/values.yaml
@@ -81,7 +81,8 @@ notifications:
               ],
               "title": "New version of {{.app.metadata.name}} deployed.",
               "message": "Application {{.app.metadata.name}} is now running new version of deployments manifests.",
-              "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+              "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}",
+              "priority": 2
             }
       slack:
         attachments: |
@@ -137,7 +138,7 @@ notifications:
               "title": "Application {{.app.metadata.name}} has degraded.",
               "message": "Application {{.app.metadata.name}} has degraded.\nApplication details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.",
               "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}",
-              "priorify": 4
+              "priority": 4
             }
       slack:
         attachments: |-
@@ -188,7 +189,7 @@ notifications:
               "title": "Failed to sync application {{.app.metadata.name}}.",
               "message": "The sync operation of application {{.app.metadata.name}} has failed at {{.app.status.operationState.finishedAt}} with the following error: {{.app.status.operationState.message}}\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
               "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}",
-              "priorify": 4
+              "priority": 4
             }
       slack:
         attachments: |-
@@ -345,7 +346,7 @@ notifications:
               "markdown": true,
               "message": "Application {{.app.metadata.name}} has been successfully synced at {{.app.status.operationState.finishedAt}}.\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
               "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}",
-              "priorify": 2
+              "priority": 2
             }
       slack:
         attachments: |-
