--- a/infra/nextcloud/values.yaml
+++ b/infra/nextcloud/values.yaml
@@ -18,6 +18,8 @@ tolerations:
 
 nextcloud:
   host: nextcloud.k.joshuachp.dev
+  defaultConfigs:
+    imaginary.config.php: true
   existingSecret:
     enabled: true
     secretName: nextcloud-secret
@@ -47,6 +49,15 @@ nextcloud:
         ),
         'forwarded_for_headers' => array('HTTP_X_FORWARDED_FOR'),
       );
+  phpConfigs:
+    zz-opcache-setup.ini: |-
+      opcache.enable_cli = 1
+      opcache.revalidate_freq = 60
+      opcache.jit = 1255
+      opcache.jit_buffer_size = 8M
+
+imaginary:
+  enabled: true
 
 internalDatabase:
   enabled: false
