--- a/infra/nextcloud/values.yaml
+++ b/infra/nextcloud/values.yaml
@@ -37,6 +37,19 @@ nextcloud:
         'maintenance_window_start' => 1,
         'default_phone_region' => 'IT',
         'overwrite.cli.url' => 'https://nextcloud.k.joshuachp.dev',
+        'enabledPreviewProviders' => array(
+          0 => 'OC\Preview\BMP',
+          1 => 'OC\Preview\GIF',
+          2 => 'OC\Preview\JPEG',
+          3 => 'OC\Preview\Krita',
+          4 => 'OC\Preview\MarkDown',
+          5 => 'OC\Preview\MP3',
+          6 => 'OC\Preview\OpenDocument',
+          7 => 'OC\Preview\PNG',
+          8 => 'OC\Preview\TXT',
+          9 => 'OC\Preview\XBitmap',
+          10 => 'OC\Preview\Movie',
+        ),
       );
     proxy.config.php: |-
       <?php
