feat(nixSsh): add support for remote store

--- a/infra/woodpecker/values.yaml
+++ b/infra/woodpecker/values.yaml
@@ -32,6 +32,7 @@ server:
     WOODPECKER_LIMIT_MEM: "2147483648" # 2GB
     WOODPECKER_LIMIT_MEM_SWAP: "2147483648" # 2GB
     WOODPECKER_LIMIT_CPU_SET: "1,2"
+    WOODPECKER_LIMIT_CPU_QUOTA: "200"
   extraSecretNamesForEnvFrom:
     - woodpecker-env
     - woodpecker-server-env
