--- a/infra/forgejo/values.yaml
+++ b/infra/forgejo/values.yaml
@@ -1,5 +1,6 @@
 ingress:
-  enabled: true
+  # FIXME: https://code.forgejo.org/forgejo-helm/forgejo-helm/pulls/1056
+  enabled: false
   className: nginx
   hosts:
     - host: git.k.joshuachp.dev
