--- a/infra/argocd/applications.yaml
+++ b/infra/argocd/applications.yaml
@@ -90,7 +90,7 @@ spec:
       path: infra/forgejo
       ref: repo
     - chart: forgejo
-      repoURL: code.forgejo.org/forgejo-helm/
+      repoURL: code.forgejo.org/forgejo-helm
       targetRevision: 11.0.1
       helm:
         valueFiles:
