--- a/infra/woodpecker/values.yaml
+++ b/infra/woodpecker/values.yaml
@@ -4,6 +4,7 @@ agent:
     WOODPECKER_BACKEND_K8S_STORAGE_CLASS: "local-path"
     WOODPECKER_BACKEND_K8S_STORAGE_RWX: false
     WOODPECKER_MAX_WORKFLOWS: "2"
+  mapAgentSecret: false
   extraSecretNamesForEnvFrom:
     - woodpecker-env
   persistentVolume:
