--- a/infra/forgejo/values.yaml
+++ b/infra/forgejo/values.yaml
@@ -47,17 +47,17 @@ gitea:
       ENABLE_NOTIFY_MAIL: true
     database:
       DB_TYPE: postgres
-      HOST: db.tcp.postgres.postgres.svc.cluster.local:5432
+      HOST: pgbouncer.postgres.svc.cluster.local:5432
       NAME: forgejo
       USER: forgejo
     session:
       PROVIDER: db
     cache:
       ADAPTER: redis
-      HOST: redis://:forgejo@tcp-redis.tcp.forgejo-redis-master.forgejo.svc.cluster.local:6379/0?pool_size=100&idle_timeout=180s
+      HOST: redis://:forgejo@forgejo-redis-master.forgejo.svc.cluster.local:6379/0?pool_size=100&idle_timeout=180s
     queue:
       TYPE: redis
-      CONN_STR: redis://:forgejo@tcp-redis.tcp.forgejo-redis-master.forgejo.svc.cluster.local:6379/0?pool_size=100&idle_timeout=180s
+      CONN_STR: redis://:forgejo@forgejo-redis-master.forgejo.svc.cluster.local:6379/0?pool_size=100&idle_timeout=180s
     indexer:
       ISSUE_INDEXER_TYPE: bleve
       REPO_INDEXER_ENABLED: true
